--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore Firebase configuration file
+src/js/app.js
+
+# Node modules
+node_modules/
+
+# Build outputs
+dist/
+
+.env
