--- a/kotlin-blog/package.json
+++ b/kotlin-blog/package.json
@@ -12,9 +12,13 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "firebase": "^11.2.0",
+    "lucide-react": "^0.473.0",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
